2013-10-09  Roland McGrath  <mcgrathr@google.com>

	* elf64-alpha.c (elf64_alpha_relax_tls_get_addr): Cast switch
	expression to int to silence over-eager compiler warnings.

	* xcofflink.c (_bfd_xcoff_bfd_final_link): Don't touch EREL in
	loop that doesn't use (or initialize) it.

	* elfxx-tilegx.c (tilegx32_plt_tail_entry, tilegx32_plt_tail_entry):
	Move second const qualifier so it applies to the pointer.

2013-10-09  Nick Clifton  <nickc@redhat.com>

	PR binutils/16022
	* elf32-rx.c (rx_dump_symtab): Add missing break statements.

2013-10-09  Tom Tromey  <tromey@redhat.com>

	* opncls.c (get_alt_debug_link_info_shim): Update type of 'len'.

2013-10-09  Nick Clifton  <nickc@redhat.com>

	PR ld/16021
	* elf32-rl78.c (rl78_dump_symtab): Delete.
	(rl78_get_reloc): Delete.

2013-10-09  Tom Tromey  <tromey@redhat.com>

	* bfd-in2.h: Rebuild.
	* opncls.c (bfd_get_alt_debug_link_info): Change type of
	buildid_len to bfd_size_type.

2013-10-09  Sergio Durigan Junior  <sergiodj@redhat.com>

	PR binutils/15993
	* elf32-m32c.c (dump_symtab): Add missing "break;" statement on each
	"case".  Reindent "switch" statements.

2013-10-08  Tom Tromey  <tromey@redhat.com>

	* bfd-in2.h: Rebuild.
	* opncls.c (bfd_get_alt_debug_link_info): Add buildid_len
	parameter.  Change type of buildid_out.  Update.
	(get_alt_debug_link_info_shim): New function.
	(bfd_follow_gnu_debuglink): Use it.

2013-10-08  Andreas Schwab  <schwab@suse.de>

	* elf32-m68k.c (elf_m68k_size_dynamic_sections): Add DT_DEBUG also
	for PIE executables.

2013-10-04  Jan-Benedict Glaw  <jbglaw@lug-owl.de>

	* configure: Regenerate.

2013-10-03  Will Newton  <will.newton@linaro.org>

	* configure: Regenerate.
	* configure.in: Build elf-ifunc.o for AArch64.
	* elfnn-aarch64.c: Include objalloc.h.
	(elfNN_aarch64_local_htab_hash): New function.
	(elfNN_aarch64_local_htab_eq): New function.
	(elfNN_aarch64_get_local_sym_hash): New function.
	(elfNN_aarch64_link_hash_table_create): Initialize local STT_GNU_IFUNC